fixed userInfo modal z-index

--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -46,7 +46,7 @@
   background: rgba(0, 0, 0, 0.5);
   padding: 0 1rem;
   border-radius: 12px;
-  z-index: 100;
+  z-index: 10000000;
   backdrop-filter: blur(64px);
   transform: translateY(100%);
   min-width: fit-content;
